src/app/globals.css
:root {
    --background: #0a0a0a;
    --foreground: #ededed;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  display: flex;
  flex-direction: column;
  
  color: var(--foreground);
  background: var(--background);
  font-family: var(--font-geist-sans), sans-serif;

  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

.toolbar {
  position: sticky;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;

  width: 100vw;
  height: 8vh;
  min-height: 67px;

  padding-top: 1vh;
  padding-bottom: 1vh;
  padding-left: 1vw;
  padding-right: 2vw;
  border-bottom: solid var(--foreground);
}

.toolbar > h1 {
  flex-grow: 3;
  font-size: clamp(30px, 4vmin, 34px);
}

.toolbar > h2 {
  flex-grow: 1;
  font-size: clamp(21px, 2.8vmin, 24px);
}

